修改系列报错，部门布局

--- a/web/apps/web-ele/src/locales/langs/zh-CN/system.json
+++ b/web/apps/web-ele/src/locales/langs/zh-CN/system.json
@@ -12,6 +12,9 @@
     "userName": "用户名",
     "account": "账号",
     "email": "邮箱",
-    "operation": "操作"
+    "operation": "操作",
+    "allDept": "全部部门",
+    "selectDept": "选择部门",
+    "loadFailed": "加载用户失败"
   }
 }
