--- a/web/apps/web-ele/src/locales/langs/zh-CN/common.json
+++ b/web/apps/web-ele/src/locales/langs/zh-CN/common.json
@@ -11,6 +11,7 @@
   "edit": "编辑",
   "update": "更新",
   "reset": "重置",
+  "createTime": "创建时间",
   "status": "状态",
   "enabled": "启用",
   "disabled": "禁用",
